Fix horizontal scroll on mobile

--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -60,7 +60,7 @@
 
 .card--blog-list .card--body {
     display: grid;
-    grid-template-columns: repeat(2, minmax(150px, 1fr));
+    grid-template-columns: repeat(2, minmax(130px, 1fr));
     grid-gap: 2rem;
     font-size: 12pt;
     font-family: RedHatText, "Red Hat Text", Overpass, Overpass, "Helvetica Neue", Arial, sans-serif;
